--- a/site.config.json
+++ b/site.config.json
@@ -70,6 +70,9 @@
     "autoGenerate": false,
     "imageProvider": "unsplash",
     "imageFallback": "placeholder"
+  },
+  "admin": {
+    "enabled": false
   }
 }
 
