feat: redesign frontend with dark minimalist theme

--- a/site.config.json
+++ b/site.config.json
@@ -21,9 +21,10 @@
   "list": "masonry"
 },
   "branding": {
-    "primaryColor": "#2563eb",
-    "secondaryColor": "#1e40af",
-    "accentColor": "#3b82f6",
+    "primaryColor": "#3b82f6",
+    "secondaryColor": "#60a5fa",
+    "accentColor": "#2563eb",
+    "backgroundColor": "#0a0a0b",
     "logoUrl": "/logo.svg",
     "faviconUrl": "/favicon.ico"
   },
@@ -72,7 +73,7 @@
     "imageFallback": "placeholder"
   },
   "admin": {
-    "enabled": false
+    "enabled": true
   }
 }
 
