--- a/site.config.json
+++ b/site.config.json
@@ -17,7 +17,7 @@
   ],
   "layout": {
   "homepage": "magazine",
-  "article": "standard",
+  "article": "minimal",
   "list": "masonry"
 },
   "branding": {
